kubernetes/examples/redirect-to-external-domain/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whapi-legacy-staging
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: whapi-legacy-staging
    port: 443
    protocol: TCP
    targetPort: 443

---
apiVersion: v1
kind: Endpoints
metadata:
  name: whapi-legacy-staging
subsets:
- addresses:
  - ip: 172.17.220.203
  ports:
  - name: whapi-legacy-staging
    port: 443
    protocol: TCP
